--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -27,9 +27,16 @@ p{
 h1{
   font-family: "Prompt";
   color: black;
+  text-align: center;
 }
 
 h2{
   font-family: "Maitree";
-  color: grey;
+  color: hsl(191, 27, 50);
+}
+
+a{
+  font-family: "Heebo";
+  color: hsl(170, 86, 28);
+  text-decoration-line: none;
 }
