--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,7 @@
 }
 p {
   font-family: "Heebo";
+  color: hsl(0deg, 0%, 30%);
 }
 
 h1 {
@@ -32,5 +33,13 @@ h2 {
 a {
   font-family: "Heebo";
   color: hsl(170deg, 86%, 28%);
-  text-decoration-line: none;
+  text-decoration-color: white;
+}
+
+a:hover {
+  text-decoration-color: hsl(170deg, 86%, 28%);
+}
+
+svg {
+  max-width: 10px;
 }
