--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,7 @@
 
 p{
   font-family: "Heebo";
+  color: hsl(0,0,30);
 }
 
 h1{
@@ -38,5 +39,13 @@ h2{
 a{
   font-family: "Heebo";
   color: hsl(170, 86, 28);
-  text-decoration-line: none;
+  text-decoration-color: white;
+}
+
+a:hover{
+text-decoration-color: hsl(170, 86, 28);
+}
+
+svg{
+  max-width: 10px;
 }
