--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,16 @@
 /* main */
+/* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1600,24,1.5,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+:root {
+  --step--2: clamp(0.67rem, calc(0.70rem + -0.03vw), 0.69rem);
+  --step--1: clamp(0.83rem, calc(0.79rem + 0.21vw), 1.00rem);
+  --step-0: clamp(1.00rem, calc(0.88rem + 0.63vw), 1.50rem);
+  --step-1: clamp(1.20rem, calc(0.94rem + 1.31vw), 2.25rem);
+  --step-2: clamp(1.44rem, calc(0.96rem + 2.42vw), 3.38rem);
+  --step-3: clamp(1.73rem, calc(0.89rem + 4.17vw), 5.06rem);
+  --step-4: clamp(2.07rem, calc(0.69rem + 6.90vw), 7.59rem);
+  --step-5: clamp(2.49rem, calc(0.26rem + 11.13vw), 11.39rem);
+}
+
 @font-face {
   font-family: "Heebo";
   font-weight: 400;
@@ -14,32 +26,84 @@
   font-weight: 800;
   src: url("../fonts/prompt-black-webfont.woff2") format("woff2"), url("../fonts/prompt-black-webfont.woff") format("woff");
 }
+header {
+  background: linear-gradient(to top, #ffffff 0%, #e5e5e5 100%);
+  padding: 0 1vw;
+}
+
+nav {
+  display: grid;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+nav li {
+  display: inline-block;
+}
+
+.container:nth-child(2n) {
+  background: linear-gradient(to top, #ffffff 0%, #e5e5e5 100%);
+}
+
 p {
   font-family: "Heebo";
   color: hsl(0deg, 0%, 30%);
+  line-height: 2;
+  font-size: var(--step-0);
 }
 
 h1 {
   font-family: "Prompt";
   color: black;
   text-align: center;
+  padding: 1ch;
+  font-size: var(--step-4);
 }
 
 h2 {
   font-family: "Maitree";
   color: hsl(191deg, 27%, 50%);
+  padding: 1ch;
+  font-size: var(--step-2);
 }
 
 a {
   font-family: "Heebo";
-  color: hsl(170deg, 86%, 28%);
-  text-decoration-color: white;
+  color: hsl(170deg, 86%, 25%);
+  text-decoration: none;
+  font-size: var(--step-0);
 }
 
 a:hover {
-  text-decoration-color: hsl(170deg, 86%, 28%);
+  color: hsl(170deg, 86%, 18%);
+  text-decoration: underline;
 }
 
 svg {
   max-width: 10px;
+}
+
+.skip-link {
+  position: absolute;
+  left: -9999px;
+  z-index: 999;
+  padding: 1em;
+  background-color: hsl(170deg, 86%, 28%);
+  color: white;
+  opacity: 0;
+  text-decoration: none;
+}
+
+.skip-link:focus {
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 1;
+}
+
+.skip-link:focus:hover {
+  background-color: hsl(170deg, 86%, 18%);
+  color: white;
+  text-decoration: none;
 }
