--- a/public/style.css
+++ b/public/style.css
@@ -22,29 +22,65 @@
   src: url("../fonts/maitree-regular-webfont.woff2") format("woff2"), url("../fonts/maitree-regular-webfont.woff") format("woff");
 }
 @font-face {
-  font-family: "Prompt";
-  font-weight: 800;
-  src: url("../fonts/prompt-black-webfont.woff2") format("woff2"), url("../fonts/prompt-black-webfont.woff") format("woff");
+  font-family: "Beba";
+  font-weight: 400;
+  src: url("../fonts/bebasneue-regular-webfont.woff2") format("woff2"), url("../fonts/bebasneue-regular-webfont.woff") format("woff");
 }
 header {
   background: linear-gradient(to top, #ffffff 0%, #e5e5e5 100%);
   padding: 0 1vw;
 }
-
-nav {
-  display: grid;
-}
-nav ul {
-  margin: 0;
+header p {
+  font-size: var(--step--2);
+  text-align: right;
+  margin-right: 1ch !important;
   padding: 0;
-  list-style: none;
+}
+header a {
+  font-size: var(--step--2);
+}
+header .container {
+  display: flex;
+  flex-direction: column;
+}
+header .link-github {
+  align-self: flex-end;
+  text-align: right;
+  min-width: 50ch;
+  padding-right: 1ch;
+}
+
+nav ul {
+  padding: 0.25ch;
+  list-style-type: none;
+  padding-bottom: 3ch;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem 0.5rem;
 }
 nav li {
-  display: inline-block;
+  width: 25%;
+  background-color: hsl(170deg, 86%, 25%);
+  text-align: center;
+  border: hsl(170deg, 86%, 18%) solid 1px;
+  border-right: hsl(170deg, 86%, 18%) solid 2px;
+  border-radius: 5px;
+  box-shadow: 0 5px 5px 0 grey;
 }
-
-.container:nth-child(2n) {
-  background: linear-gradient(to top, #ffffff 0%, #e5e5e5 100%);
+nav li a {
+  font-size: 0.6rem;
+  color: white;
+  font-size: clamp(0.6rem, 0.5rem + 0.5vw, 0.69rem);
+  display: block;
+  padding: 0.5ch 1ch;
+}
+nav li a:hover {
+  color: white;
+  text-decoration: none;
+}
+nav li:hover {
+  background-color: hsl(170deg, 86%, 18%);
+  box-shadow: none;
 }
 
 p {
@@ -52,21 +88,37 @@ p {
   color: hsl(0deg, 0%, 30%);
   line-height: 2;
   font-size: var(--step-0);
+  max-width: 60ch;
+  margin: 0 auto !important;
+  padding: 0 2vw;
 }
 
 h1 {
-  font-family: "Prompt";
-  color: black;
+  font-family: "Beba";
+  color: hsl(0deg, 0%, 15%);
   text-align: center;
-  padding: 1ch;
+  letter-spacing: 0.25ch;
   font-size: var(--step-4);
+  text-shadow: 0px 5px 5px grey;
 }
 
 h2 {
   font-family: "Maitree";
-  color: hsl(191deg, 27%, 50%);
-  padding: 1ch;
+  color: hsl(190deg, 27%, 30%);
+  padding: 0.5ch;
   font-size: var(--step-2);
+  line-height: 1.2;
+  margin: 0 auto !important;
+  max-width: 30ch;
+  text-align: center;
+}
+
+h3, h4 {
+  font-family: "Maitree";
+  color: black;
+  padding: 0.5ch;
+  font-size: var(--step-0);
+  text-align: center;
 }
 
 a {
@@ -83,6 +135,8 @@ a:hover {
 
 svg {
   max-width: 10px;
+  text-align: right;
+  margin-right: 1ch !important;
 }
 
 .skip-link {
@@ -90,7 +144,7 @@ svg {
   left: -9999px;
   z-index: 999;
   padding: 1em;
-  background-color: hsl(170deg, 86%, 28%);
+  background-color: hsl(170deg, 86%, 25%);
   color: white;
   opacity: 0;
   text-decoration: none;
@@ -106,4 +160,68 @@ svg {
   background-color: hsl(170deg, 86%, 18%);
   color: white;
   text-decoration: none;
+}
+
+li {
+  font-family: "Heebo";
+  color: hsl(0deg, 0%, 30%);
+  font-size: var(--step--0);
+  max-width: 60ch;
+  margin: 0 auto;
+  padding-bottom: 1ch;
+}
+
+a {
+  font-size: var(--step--0);
+  text-align: center;
+}
+
+p {
+  padding-bottom: 1rem;
+}
+
+.link-allstyles, .view-sylesheet, .link-guidelines {
+  text-align: center;
+  display: block;
+  margin: 5ch;
+}
+
+#files a {
+  display: block;
+}
+
+.modern-container, .contribute-container {
+  background-image: linear-gradient(to top, #ffffff 0%, #e5e5e5 100%);
+}
+
+footer {
+  background-color: hsl(170deg, 86%, 97%);
+}
+
+.page-footer {
+  display: grid;
+  background-image: linear-gradient(to top, #ffffff 0%, #e5e5e5 100%);
+}
+.page-footer p, .page-footer a {
+  font-size: var(--step--2);
+  text-align: center;
+  list-style: none;
+  max-width: none;
+}
+.page-footer ul {
+  font-size: var(--step--2);
+  text-align: center;
+  list-style: none;
+  max-width: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+.page-footer ul li {
+  display: inline;
+  width: 25%;
+}
+
+.profile ul, #styles ul {
+  text-align: center;
+  list-style: none;
 }
