--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -27,30 +27,68 @@
 }
 
 @font-face{
-  font-family: "Prompt";
-  font-weight: 800;
-  src: url('../fonts/prompt-black-webfont.woff2') format('woff2'),
-       url('../fonts/prompt-black-webfont.woff') format('woff');
+  font-family: "Beba";
+  font-weight: 400;
+  src: url('../fonts/bebasneue-regular-webfont.woff2') format('woff2'),
+       url('../fonts/bebasneue-regular-webfont.woff') format('woff');
 }
 
 header{
 background: linear-gradient(to top, #ffffff 0%,#e5e5e5 100%);
 padding: 0 1vw;
+p{
+  font-size: var(--step--2);
+  text-align: right;
+  margin-right: 1ch !important;
+  padding: 0;
+}
+a{
+  font-size: var(--step--2);
+}
+.container{
+  display: flex;
+  flex-direction: column;
+}
+.link-github{
+  align-self: flex-end;
+  text-align: right;
+  min-width: 50ch;
+  padding-right: 1ch;
+}
 }
 nav{
-  display: grid;
 ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    padding: 0.25ch;
+    list-style-type: none;
+    padding-bottom: 3ch;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem 0.5rem;
   }
   li {
-    display: inline-block;
+    width: calc(100%/4);
+    background-color: hsl(170, 86, 25);
+    text-align: center;
+    border: hsl(170, 86, 18) solid 1px;
+    border-right: hsl(170, 86, 18) solid 2px;
+    border-radius: 5px;
+    box-shadow: 0 5px 5px 0 grey;
+  a{
+    font-size: 0.6rem;
+    color: white;
+    font-size: clamp(0.6rem, calc(0.50rem + 0.5vw), 0.69rem);
+    display: block;
+    padding: 0.5ch 1ch;
+  }
+  a:hover{
+    color:white;
+  text-decoration: none;
   }
 }
-
-.container:nth-child(2n){
-  background: linear-gradient(to top, #ffffff 0%,#e5e5e5 100%);
+  li:hover{
+  background-color: hsl(170, 86, 18);
+  box-shadow: none;
+  }
 }
 
 p{
@@ -58,21 +96,37 @@ p{
   color: hsl(0,0,30);
   line-height: 2;
   font-size: var(--step-0);
+  max-width: 60ch;
+  margin: 0 auto !important;
+  padding: 0 2vw;
 }
 
 h1{
-  font-family: "Prompt";
-  color: black;
+  font-family: "Beba";
+  color: hsl(0,0,15);
   text-align: center;
-  padding: 1ch;
+  letter-spacing: 0.25ch;
   font-size: var(--step-4);
+  text-shadow:0px 5px 5px grey;
 }
 
 h2{
   font-family: "Maitree";
-  color: hsl(191, 27, 50);
-  padding: 1ch;
+  color: hsl(190, 27%, 30%);
+  padding: 0.5ch;
   font-size: var(--step-2);
+  line-height: 1.2;
+  margin: 0 auto !important;
+  max-width: 30ch;
+  text-align: center;
+}
+
+h3, h4{
+  font-family: "Maitree";
+  color: black;
+  padding: 0.5ch;
+  font-size: var(--step-0);
+  text-align: center;
 }
 
 a{
@@ -89,6 +143,8 @@ text-decoration: underline;
 
 svg{
   max-width: 10px;
+  text-align: right;
+  margin-right: 1ch !important;
 }
 
 .skip-link {
@@ -96,7 +152,7 @@ svg{
   left: -9999px;
   z-index: 999;
   padding: 1em;
-  background-color: hsl(170, 86, 28);
+  background-color: hsl(170, 86, 25);
   color: white;
   opacity: 0;
   text-decoration: none;
@@ -111,4 +167,71 @@ svg{
   background-color: hsl(170, 86, 18);
   color:white;
   text-decoration: none;
+}
+
+li{
+  font-family: "Heebo";
+  color: hsl(0,0,30);
+  font-size: var(--step--0);
+  max-width: 60ch;
+  margin: 0 auto;
+  padding-bottom: 1ch;
+}
+
+a{
+    font-size: var(--step--0);
+    text-align: center;
+  }
+
+  p{
+  padding-bottom: 1rem;
+  }
+
+.link-allstyles, .view-sylesheet, .link-guidelines{
+  text-align: center;
+display: block;
+margin: 5ch;
+}
+
+#files{
+  a{
+    display: block;
+  }
+}
+
+.modern-container, .contribute-container{
+  background-image: linear-gradient(to top, #ffffff 0%,#e5e5e5 100%);
+}
+
+footer{
+  background-color: hsl(170, 86, 97);;
+}
+
+.page-footer{
+  display: grid;
+  background-image: linear-gradient(to top, #ffffff 0%,#e5e5e5 100%);
+  p, a{
+    font-size: var(--step--2);
+    text-align: center;
+    list-style: none;
+    max-width: none;
+  }
+  ul{font-size: var(--step--2);
+    text-align: center;
+    list-style: none;
+    max-width: none;
+    display: flex;
+    flex-wrap: wrap;
+    li{
+      display:inline;
+      width: calc(100%/4);
+    }
+  }
+}
+
+.profile, #styles{
+  ul{
+    text-align: center;
+    list-style: none;
+  }
 }
