--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -214,6 +214,7 @@ footer{
     text-align: center;
     list-style: none;
     max-width: none;
+    padding-top: 2ch;
   }
   ul{font-size: var(--step--2);
     text-align: center;
